<resources>
    <string name="app_name">Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register Yourself</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>