<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewActivity">
    <ImageView
        android:layout_width="240px"
        android:layout_height="100px"
        android:id="@+id/imgLogo"
        android:src="@drawable/avenger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMobileNumber"
        android:layout_margin="20dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/imgLogo"
        android:hint="@string/mobile_number"
        android:padding="6dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:layout_margin="20dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/etMobileNumber"
        android:hint="@string/password"
        android:padding="6dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_margin="20dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/etPassword"
        android:padding="6dp"
        android:background="@color/myColor"
        android:text="@string/login"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtForgotPassword"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnLogin"
        android:textSize="18sp"
        android:layout_marginTop="20px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegister"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        />



</RelativeLayout>